--- a/styles/global.css
+++ b/styles/global.css
@@ -1,28 +1,3 @@
-h1{
-    text-align: center;
-    text-decoration: underline;
-}
-.definition{
-    text-decoration: underline dotted;
-}
-.section{
-    margin: 10px 10%;
-    padding: 20px;
-    border: 1px solid black;
-    background-color: lightblue;
-}
-#header
-{
-    width: 100%;
-    height: 35px;
-    vertical-align: middle;
-    background-color: peachpuff;
-}
-#date
- {
-     margin: 0;
-     padding-top: 7px;
- }
 html{
     height: 100%;
 }
@@ -32,34 +7,15 @@ body{
     padding: 0;
     background: linear-gradient(#0056e0, #7caeff) fixed;
 }
-
-.italic{
-    font-style: italic;
-}
-#modes {
+h1{
     text-align: center;
-
-}
-.left {
-    display: block;
-    text-align: left;
-}
-#modeDesc img{
-    height: 225px;
-    width: 400px;
-}
-#modes a {
-    border: 1px solid black;
-    margin-right: 5px;
-    margin-left: 5px;
-    padding: 5px;
-
-}
-.chosen {
-    background-color: goldenrod;
+    text-decoration: underline;
 }
 a {
-  color: blue;
+    color: blue;
     font-weight: bold;
     background-color: antiquewhite;
+}
+a:hover {
+    background-color: goldenrod;
 }
