--- a/styles/global.css
+++ b/styles/global.css
@@ -19,3 +19,19 @@ a {
 a:hover {
     background-color: goldenrod;
 }
+table {
+    border-collapse: collapse;
+    display: inline;
+}
+table td{
+    border: 2px solid black;
+    width: 250px;
+    padding: 5px;
+}
+table tr {
+    font-size: x-large;
+}
+video{
+    width: 400px;
+    height: 225px;
+}
