--- a/styles/ids.css
+++ b/styles/ids.css
@@ -1,13 +1,31 @@
-
+#bestPlayers, #beatmaps {
+    text-align: center;
+}
+#bestPlayers h2, #beatmaps h2{
+    display: block;
+    text-align: left;
+}
+#center{
+    float: left;
+    padding-top: 7px;
+    position: absolute;
+    margin-left: 44%;
+}
 #date
 {
-    margin: 0;
+    position: absolute;
     padding-top: 7px;
+    float: left;
+}
+
+#header p{
+
+    margin-top: 0;
 }
 #header
 {
     width: 100%;
-    height: 35px;
+    height: 32px;
     vertical-align: middle;
     background-color: peachpuff;
 }
@@ -21,6 +39,10 @@
 #modes {
     text-align: center;
 
+}
+#imgThanks {
+    text-align: center;
+    display: block;
 }
 #modes a {
     border: 1px solid black;
@@ -36,6 +58,26 @@
 #sommaire a
 {
     border: 1px solid black;
+    padding: 5px;
     width: 200px;
     font-size: x-large;
+}
+#sommaireList3 ul {
+
+    list-style: none;
+    display: block;
+    text-align: center;
+}
+#sommaireList3 li{
+    display: inline;
+}
+#sommaireList3 li img{
+    width: 256px;
+    height: 256px;
+    display: inline;
+}
+
+#sommaireList3 li a{
+    background-color: transparent;
+    text-decoration: none;
 }
